# Image-Retrievel-Engine

./: .env.example  .gitignore  Dockerfile  README.md  debug.ipynb  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.prod.txt
configs/: helper.py
data_processer/: load_minio.py
docs/: evaluation.md  experience.md
frontend/: .env.example  Dockerfile  app.py  run_app.py
frontend/src/: README.md  app.py  run_server.py
source/api/: README.md  main.py  route_search.py  run_server.py
source/api/core/: middleware.py
source/api/models/: base.py
source/api/routes/: __init__.py  route_embedder.py  route_operate.py  route_retriever.py  route_vdb.py
source/api/utils/: helper.py
source/base/: base_embedder.py  base_vdb.py
source/configs/: helper.py
source/data_processer/: analyze_data.ipynb  load_minio.py  loader.py  minio_client.py
source/embedder/: __init__.py  dino_extractor.py  extractor_factory.py  resnet_extractor.py  vgg_extractor.py  vit_extractor.py
source/models/: base.py  debug.ipynb  resnet_extractor.py  vgg_extractor.py
source/operator/: insert_embeddings_to_vdb.py  insert_images_to_minio.py  set_minio_policy.py  split_dataset.py
source/retriever/: __init__.py  loader.py  retriever.py
source/script/: insert_embeddings_to_vdb.py  insert_images_to_minio.py
source/utils/: helpers.py
source/validator/: metrics.py  timer.py  timing.py
source/vector_db/: milvus_client.py  vdb_factory.py
tests/: test_resnet.py
tests/model/: test_dino.py  test_resnet.py  test_vgg.py  test_vit.py
tests/vdb/: test_milvus.py
(+4 files in other folders)
