[project]
name = "image-retrieval-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.132.0",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "numpy>=2.2.6",
    "pymilvus>=2.6.9",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.54.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.41.0",
]
